--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <h1>
             MY PAGE
 <img src="https://avatars.githubusercontent.com/u/97235391?v=4">
